GNOME Bugzilla – Bug 724312
Can't assign IP Address without Gateway
Last modified: 2014-02-18 08:49:09 UTC
Created attachment 269056 [details] screenshot of ipv4 settings (disabled add button) It is not necessary to have default gw (gateway) for a Peer-to-Peer network. How can we assign ip address like: ifconfig eth0 192.168.1.2 up with network settings? The Network settings makes the "add" button disabled unless we assign a default gateway, which is not really required in a p2p network. Please allow to add ip address without gateway address. thanks.
You should be able to configure the network without a gateway if you check "Use this connection only for resources on its network" (which prevents NM for considering it as a default route candidate)
I checked that, still "Add" button is not enabled unless I enter gateway ip address. The minimal thing to work in a p2p network is IP address and Netmask; gateway is for internet connectivity. I tried to connect Xerox machines to the pc, where there is no internet connection and only a hub with 2 systems and 2 network printers/xerox machines. I had to manually do the assignment using ifconfig.
Created attachment 269467 [details] [review] network: don't warn for invalid settings g_warning() is for environment errors, not user errors. Not being able to click OK is enough to understand that something is wrong, and if not we should highlight the faulty setting, not spam the logs, expecially in the middle of digitation. Keep a log anyway, for debugging.
Created attachment 269468 [details] [review] network: allow an empty gateway address in the connection editor It appears that this has always been the intention of the code, but the check was incomplete.
Review of attachment 269467 [details] [review]: "digitation". I think you mean "typing" unless you come from the 19th century :) And where are you "keeping a log"? You're downgrading warnings to debug statements. The patch itself looks good
Review of attachment 269468 [details] [review]: Looks good.
Attachment 269467 [details] pushed as 8b6f9af - network: don't warn for invalid settings Attachment 269468 [details] pushed as 41b33dc - network: allow an empty gateway address in the connection editor