network: don't warn for invalid settings

g_warning() is for environment errors, not user errors. Not being
able to click OK is enough to understand that something is wrong,
and if not we should highlight the faulty setting, not spam the logs,
expecially in the middle of digitation. Keep a log anyway, for
debugging.

https://bugzilla.gnome.org/show_bug.cgi?id=724312